--- a/vscode/config.json
+++ b/vscode/config.json
@@ -4,8 +4,7 @@
   "slug": "vscode",
   "description": "Fully featured VSCode experience, to edit your HA config in the browser, including auto-completion!",
   "url": "https://github.com/hassio-addons/addon-vscode",
-  "ingress": true,
-  "ingress_port": 1337,
+  "ingress": false,
   "panel_icon": "mdi:microsoft-visual-studio-code",
   "startup": "services",
   "init": false,
